challange-1/fixed layout issue

--- a/snigbar/challange-1/app/globals.css
+++ b/snigbar/challange-1/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-text {
+  background-image: linear-gradient(to right, black 60%, #e7e7e7);
+  color: transparent;
+  background-clip: text;
+}
+
+.dark .gradient-text {
+  background-image: linear-gradient(to right, white 60%, #685e5e);
+}
